--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+asgiref = "==3.4.1"
+gunicorn = "==20.1.0"
+psycopg2 = "==2.9.1"
+pytz = "==2021.3"
+sqlparse = "==0.4.2"
+whitenoise = "==5.3.0"
+Django = "==3.2.8"
+Pillow = "==8.3.2"
 
 [dev-packages]
 
