--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ sqlparse = "==0.4.2"
 whitenoise = "==5.3.0"
 Django = "==3.2.8"
 Pillow = "==8.3.2"
-
+django-heroku = "*"
 [dev-packages]
 
 [requires]
